# HR2

./: .gitignore  CMakeLists.txt
data/: letters.xml
src/universal/: dbg.h  pline.c  pline.h  raster.c  raster.h  utl.c  utl.h  xml.c  xml.h
src/win/: main.cpp
